# gains

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  lefthook.yml  pyproject.toml  test_services.py  test_sprint2.py  test_zmq_bridge.py
.github/: dependabot.yml
.github/workflows/: ci.yml  tauri-build.yml
GAINS/: .gitignore
GAINS/gains/: Cargo.toml
GAINS/gains/src-tauri/: tauri.conf.json
GAINS/gains/src-tauri/src/: main.rs
GAINS/plugins/grammar_guard/: plugin.py
GAINS/services/asr/: server.py
GAINS/services/asr/config/: settings.yaml
GAINS/services/plugins/: runner.py
GAINS/tauri-app/: package.json  pnpm-lock.yaml
docs/: modernization-assessment.md  plugins.md
plugins/grammar_guard/: plugin.py
plugins/sample_rewriter/: plugin.py
scripts/: bench.py
services/asr/: server.py
services/bus/: hub.py
services/notes/: exporter.py
services/plugins/: __init__.py  runner.py
services/tts/: voice.py
services/vision/: nod.py
tauri-app/: .gitignore  Cargo.toml  index.html  styles.css  tauri.conf.json
tauri-app/src/: app.rs  main.ts
tauri-app/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: bus.rs  lib.rs  main.rs  zmq_bridge.rs
tests/: conftest.py  test_bus_proxy.py  test_imports.py
