[package]
name = "gains-ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CustomEvent", "Window"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[workspace]
members = ["src-tauri"]
