[package]
name = "gains"
version = "0.1.0"
description = "GAINS — Gesture-Assisted Intelligent Note Scribe (desktop shell)"
edition = "2021"

[lib]
# The `_lib` suffix is required so the lib name doesn't conflict with the
# bin name on Windows (rust-lang/cargo#8519).
name = "gains_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zmq = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
